<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="men_s">MEN\'S</string>
    <string name="women_s">WOMEN’S</string>
    <string name="co_ed">CO-ED</string>
    <string name="find_a_team_in_your_city_and_dominate_the_leage">Find a team in your city and dominate the leage.</string>
    <string name="get_started">GET STARTED</string>
    <string name="desired_league">Desired League</string>
    <string name="next">NEXT</string>
    <string name="baller">Baller</string>
    <string name="beginner">Beginner</string>
</resources>
